--- a/ng-forms-bootstrap/src/app/app.component.html
+++ b/ng-forms-bootstrap/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h1>
-  {{title}}
-</h1>
+<nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
+  <div class="container">
+    <a class="navbar-brand" href="?">NG Forms</a>
+  </div>
+</nav>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
