--- a/ng-forms-bootstrap/src/app/home/home.component.html
+++ b/ng-forms-bootstrap/src/app/home/home.component.html
@@ -1,4 +1,47 @@
-<div class="starter-template">
-  <h1>Bootstrap starter template</h1>
-  <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <h3>Employee Form</h3>
+      <form #form="ngForm" novalidate>
+        <div class="form-group">
+          <label>First Name</label>
+          <input type="text" class="form-control" name="firstName" [(ngModel)]="model.firstName">
+        </div>
+        <div class="form-group">
+          <label>Last Name</label>
+          <input type="text" class="form-control" name="lastName" [(ngModel)]="model.lastName">
+        </div>
+        <div class="checkbox">
+          <label>
+                <input type="checkbox" name="is-full-time"
+                    [(ngModel)]="model.isFullTime"> Full Time Employee
+            </label>
+        </div>
+        <label>Payment Type</label>
+        <div class="radio">
+          <label>
+                <input type="radio" name="pay-type" value="w2" checked>
+                W2
+            </label>
+        </div>
+        <div class="radio">
+          <label>
+                <input type="radio" name="pay-type" value="1099">
+                1099
+            </label>
+        </div>
+        <div class="form-group">
+          <label>Primary Language</label>
+          <select class="form-control">
+                <option *ngFor="let lang of languages">
+                    {{ lang }}
+                </option>
+            </select>
+        </div>
+        <button class="btn btn-primary" type="submit">Ok</button>
+      </form>
+      Model: {{ model | json }}
+      <br> Angular: {{ form.value | json }}
+    </div>
+  </div>
 </div>
