--- a/ng-forms-bootstrap/src/styles.scss
+++ b/ng-forms-bootstrap/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+  background: darken(#373a3c, 10%);
+}
+body {
+  position: relative;
+  min-height: 100vh;
+  margin: 0;
+  padding-top: 4rem;
+}
