--- a/ng-forms-bootstrap/src/app/home/home.component.html
+++ b/ng-forms-bootstrap/src/app/home/home.component.html
@@ -4,32 +4,31 @@
       <h3>Employee Form</h3>
       <form #form="ngForm" novalidate>
         <div class="form-group">
-          <label>First Name</label>
-          <input type="text" class="form-control" name="firstName" [(ngModel)]="model.firstName">
+          <label for="first-name" class="control-label">First Name</label>
+          <input type="text" class="form-control" id="first-name" name="firstName" [(ngModel)]="model.firstName" placeholder="First name">
         </div>
         <div class="form-group">
-          <label>Last Name</label>
-          <input type="text" class="form-control" name="lastName" [(ngModel)]="model.lastName">
+          <label for="last-name">Last Name</label>
+          <input type="text" class="form-control" id="last-name" name="lastName" [(ngModel)]="model.lastName" placeholder="Last name">
         </div>
         <div class="checkbox">
           <label>
-                <input type="checkbox" name="is-full-time"
-                    [(ngModel)]="model.isFullTime"> Full Time Employee
-            </label>
+            <input type="checkbox" name="is-full-time" [(ngModel)]="model.isFullTime"> Full Time Employee
+          </label>
         </div>
-        <label>Payment Type</label>
-        <div class="radio">
-          <label>
-                <input type="radio" name="pay-type" value="w2" checked>
-                W2
+        <fieldset class="form-group">
+          <legend>Radio buttons</legend>
+          <div class="form-check">
+            <label class="form-check-label">
+              <input type="radio" class="form-check-input" name="pay-type" id="optionsRadios1" value="w2" checked> w2
             </label>
-        </div>
-        <div class="radio">
-          <label>
-                <input type="radio" name="pay-type" value="1099">
-                1099
+          </div>
+          <div class="form-check">
+          <label class="form-check-label">
+              <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios2" value="1099"> 1099
             </label>
-        </div>
+          </div>
+        </fieldset>
         <div class="form-group">
           <label>Primary Language</label>
           <select class="form-control">
@@ -39,9 +38,11 @@
             </select>
         </div>
         <button class="btn btn-primary" type="submit">Ok</button>
+        <button class="btn btn-default" type="reset">Reset</button>
       </form>
       Model: {{ model | json }}
       <br> Angular: {{ form.value | json }}
     </div>
   </div>
 </div>
+<hr>
