--- a/ng-forms-bootstrap/src/app/home/home.component.html
+++ b/ng-forms-bootstrap/src/app/home/home.component.html
@@ -3,20 +3,22 @@
     <div class="col-md-4">
       <h3>Employee Form</h3>
       <form #form="ngForm" novalidate>
-        <div class="form-group">
-          <label for="first-name" class="control-label">First Name</label>
-          <input type="text" class="form-control" id="first-name" name="firstName" [(ngModel)]="model.firstName" placeholder="First name">
-        </div>
-        <div class="form-group">
-          <label for="last-name">Last Name</label>
-          <input type="text" class="form-control" id="last-name" name="lastName" [(ngModel)]="model.lastName" placeholder="Last name">
-        </div>
-        <div class="checkbox">
-          <label>
-            <input type="checkbox" name="is-full-time" [(ngModel)]="model.isFullTime"> Full Time Employee
-          </label>
-        </div>
-        <fieldset class="form-group">
+        <fieldset [disabled]="!formEnabled">
+          <div class="form-group">
+            <label for="first-name" class="control-label">First Name</label>
+            <input type="text" class="form-control" id="first-name" name="firstName" [(ngModel)]="model.firstName" placeholder="First name">
+          </div>
+          <div class="form-group">
+            <label for="last-name">Last Name</label>
+            <input type="text" class="form-control" id="last-name" name="lastName" [(ngModel)]="model.lastName" placeholder="Last name">
+          </div>
+          <div class="checkbox">
+            <label>
+              <input type="checkbox" name="is-full-time" [(ngModel)]="model.isFullTime"> Full Time Employee
+            </label>
+          </div>
+        </fieldset>
+        <fieldset class="form-group" [disabled]="!formEnabled">
           <legend>Radio buttons</legend>
           <div class="form-check">
             <label class="form-check-label">
@@ -29,19 +31,27 @@
             </label>
           </div>
         </fieldset>
-        <div class="form-group">
-          <label>Primary Language</label>
-          <select class="form-control">
-                <option *ngFor="let lang of languages">
-                    {{ lang }}
-                </option>
-            </select>
-        </div>
-        <button class="btn btn-primary" type="submit">Ok</button>
-        <button class="btn btn-default" type="reset">Reset</button>
+        <fieldset [disabled]="!formEnabled" class="form-group">
+          <label for="primary-language">Primary Language</label>
+          <select id="primary-language" class="form-control">
+            <option *ngFor="let lang of languages">
+              {{ lang }}
+            </option>
+          </select>
+        </fieldset>
+        <button class="btn btn-primary" type="submit" [disabled]="!formEnabled">Ok</button>
+        <button class="btn btn-default" type="reset" [disabled]="!formEnabled">Reset</button>
       </form>
-      Model: {{ model | json }}
-      <br> Angular: {{ form.value | json }}
+      <hr>
+      <div [(ngModel)]="formEnabled" ngbRadioGroup name="radioBasic" role="group" aria-label="Form enabled">
+        <p>Form enabled {{formEnabled}}</p>
+        <label class="btn btn-primary">
+          <input type="radio" [value]="true"> Enabled
+        </label>
+        <label class="btn btn-primary">
+          <input type="radio" [value]="false"> Disabled
+        </label>
+      </div>
     </div>
   </div>
 </div>
